tests/highlevel/test-outputs/highlink-cpp.out
Status: OK

STEP 1

*gen_header*: Status: error
None

STEP 2

*gen_header*: Status: error
*** gen_header ***
Result schema (transformer.result.schema) needs to be defined in JSON schema format, containing at least 'type'
*** /gen_header ***


STEP 3

*executor*: Status: error
*** executor ***
Traceback (most recent call last):
  File "/seamless/seamless/core/transformation.py", line 553, in _execute
    result, logs = await self._execute_local(
  File "/seamless/seamless/core/transformation.py", line 764, in _execute_local
    full_module_names = build_all_modules(
  File "/seamless/seamless/core/build_module.py", line 417, in build_all_modules
    mod = build_module(
  File "/seamless/seamless/core/build_module.py", line 376, in build_module
    mod = build_compiled_module(
  File "/seamless/seamless/core/build_module.py", line 329, in build_compiled_module
    raise exception from None
  File "/seamless/seamless/core/build_module.py", line 275, in build_compiled_module
    raise BuildModuleError(stderr)
seamless.core.build_module.BuildModuleError: 
g++ -c -O3 -ffast-math -march=native -fPIC -fopenmp -p -g -o /tmp/seamless-extensions/seamless_module_44a3fa90e2efe6d18b1d2ec81590dcc60d59ce96ac6ccbfbfa062a735f558b0e_module/main.o /tmp/seamless-extensions/seamless_module_44a3fa90e2efe6d18b1d2ec81590dcc60d59ce96ac6ccbfbfa062a735f558b0e_module/main.cpp
******************** ERROR ********************
/tmp/seamless-extensions/seamless_module_44a3fa90e2efe6d18b1d2ec81590dcc60d59ce96ac6ccbfbfa062a735f558b0e_module/main.cpp:1:1: error: ‘lambda’ does not name a type
    1 | lambda arr, fac, offset: 42
      | ^~~~~~

******************** /ERROR ********************
*** /executor ***


/*
The following C header has been auto-generated from the transformer schema
It will be used to generate bindings, but it will not be automatically
added to the compiled transformer code.

If your transformer code is written in C/C++, you may do so yourself.
For C, you may need to include "stdint.h" and "stdbool.h".
If your transform() function is written in C++, don't forget to add 'extern "C" '
*/

typedef struct ArrStruct {
  const double *data;
  unsigned int shape[1];
} ArrStruct;

int transform(const ArrStruct* arr, int fac, int offset, int *result);
